# netti

./: .gitignore  Cargo.toml  README
src/: main.rs
src/gui/: mod.rs
src/netctl/: mod.rs  parse.rs
