[package]
name = "netti"
version = "0.1.0"
authors = ["Kasperi Kuuskoski <kasperi.kuuskoski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.0"
glib = "0.10.0"
gdk = "0.13.0"
gdk-pixbuf = "0.9.0"
relm = "0.20.0"
relm-derive = "0.20.0"
nom = "6.0.1"

[dependencies.gio]
version = "0.9.1"
default-features = false  # just in case
features = ["v2_44"]
